# neurosim

./: .gitignore  .gitmodules  README.md  implementation.md  pytest.ini  requirements.txt  setup.py  test_sim.py
.github/workflows/: lint.yml
applications/: __init__.py
applications/f3_training/: TRAINING.md  __init__.py  event_ff.py  train_depth.py  utils.py
applications/f3_training/configs/: depth_training_config.yaml  depth_training_config.yml
applications/rl/: eval_policy.py  evaluate_reactive_dodge_nominal.py  generate_reactive_dodge_oracle.py  run_policy.py  train_hover_sb3.py  train_sb3.py
applications/rl/configs/: dodge_sb3_combined_experiment.yaml  dodge_sb3_combined_rollout.yaml  hover_sb3_combined_experiment.yaml  hover_sb3_combined_rollout.yaml  hover_sb3_events_experiment.yaml  hover_sb3_events_rollout.yaml  hover_sb3_experiment.yaml  hover_sb3_rollout.yaml  hover_sb3_state_experiment.yaml  hover_sb3_state_rollout.yaml  reactive_dodge_curriculum.yaml  reactive_dodge_nominal_eval.yaml  reactive_dodge_sb3_combined_experiment.yaml
configs/: 00014-nYYcLpSzihC-settings.yaml  apartment_1-dynamic-obstacles.yaml  apartment_1-rl-settings.yaml  apartment_1-settings-all-sensors.yaml  apartment_1-settings-voltmeter.yaml  apartment_1-settings.yaml  carla_outdoor-settings.yaml  example_dataset_config.yaml  hm3d-00000-settings.yaml  hm3d-00001-settings.yaml  hm3d-00002-settings.yaml  hm3d-00014-settings.yaml  hm3d-00042-settings.yaml  hm3d-00167-settings.yaml  online_data_example.yaml  online_data_hm3d_2gpu.yaml  replica-apartment_0-settings.yaml  replica-hotel_0-settings.yaml  replica-office_0-settings.yaml  replica-room_0-settings.yaml  skokloster-castle-settings.yaml
docker/: Dockerfile  Dockerfile.noros  Dockerfile.unreal  build.sh  run.sh
docker_reqs/: Dockerfile  build.sh  run.sh
docs/: ue5_setup.md
plots/: plot_esim_benchmark.py
ros2_ws/src/quadrotor_evsim/: package.xml  setup.cfg  setup.py
ros2_ws/src/quadrotor_evsim/quadrotor_evsim/: event_publisher.py  event_subscriber.py  habitat_wrapper.py
ros2_ws/src/quadrotor_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/quadrotor_interfaces/msg/: Control.msg  Events.msg  State.msg
scripts/: benchmark_dynamics.py  build_ms_to_idx.py  generate_dataset.py  generate_paths.py  makevid_h5.py  online_data_multigpu_demo.py  plot_profile.py  run_models_on_simdata.ipynb  visualize_h5_events.py
src/cortex/: controller_node.py  simulator_node.py
src/cortex/ros2_ws/zmq_ros2_bridge/: CMakeLists.txt  README.md
src/cortex/utils/: __init__.py  node.py
src/neurosim/: __init__.py  habitat_wrapper.py  settings.py  simulator.py  synchronous_simulator.py
src/neurosim/comms_ros2/src/neurosim_ros2_bridge/: CMakeLists.txt  README.md  package.xml
src/neurosim/comms_ros2/src/neurosim_ros2_bridge/cmake/: Findmsgpack-cxx.cmake
src/neurosim/comms_ros2/src/neurosim_ros2_bridge/config/: apartment_1.yaml
src/neurosim/comms_ros2/src/neurosim_ros2_bridge/include/neurosim_ros2_bridge/: bridge_node.hpp  config.hpp  decoders.hpp  msgpack_helpers.hpp
src/neurosim/comms_ros2/src/neurosim_ros2_bridge/launch/: bridge.launch.py
src/neurosim/comms_ros2/src/neurosim_ros2_bridge/msg/: Events.msg  Imu.msg  State.msg
src/neurosim/comms_ros2/src/neurosim_ros2_bridge/src/: bridge_node.cpp  config.cpp  decoders.cpp
src/neurosim/comms_ros2/src/neurosim_ros2_bridge/test/: smoke_state_only.yaml  smoke_state_publisher.py
src/neurosim/core/: __init__.py  navmesh_paths.py
src/neurosim/core/control/: __init__.py  rotorpy_wrapper.py  types.py
src/neurosim/core/coord_trans/: __init__.py  coord_trans.py
src/neurosim/core/dynamics/: __init__.py  multirotor_euler.py  rotorpy_wrapper.py  types.py
src/neurosim/core/event_sim/: __init__.py  types.py
src/neurosim/core/imu_sim/: __init__.py  rotorpy_wrapper.py  types.py
src/neurosim/core/trajectory/: __init__.py  habitat_trajs.py  polynomial_traj.py  types.py
src/neurosim/core/utils/: __init__.py  logging_utils.py  utils_bench.py  utils_gen.py  utils_gpu.py  utils_h5.py  utils_simcfg.py  utils_viz.py
src/neurosim/core/visual/: habitat_wrapper.py
src/neurosim/core/visual_backend/: __init__.py  base.py  carla_wrapper.py  corner_detector.py  dynamic_obstacles.py  edge_detector.py  factory.py  habitat_wrapper.py  optical_flow.py  safety.py  unreal_wrapper.py
src/neurosim/cortex/utils/: __init__.py  node.py
src/neurosim/online_data/: README.md  __init__.py  assembler.py  batcher.py  bus.py  config.py  loader.py  recorder.py  sample.py  schema.py  sim_worker.py
src/neurosim/rl/: __init__.py  disk_logging.py  env.py  env_reactive_dodge.py  safety.py  sb3_features.py
src/neurosim/rl/representations/: __init__.py  event.py
src/neurosim/rl/tasks/: __init__.py  base.py  hover_stop.py  reactive_dodge.py  trajectory_dodge.py
src/neurosim/rl/vehicles/: __init__.py  (+3 more)
src/neurosim/utils/: __init__.py  utils_asyncplot.py  utils_gen.py
tests/: conftest.py  test_asynchronous_simulator_cortex.py  test_corner_edge_detectors.py  test_dynamic_obstacles.py  test_online_data_assembler.py  test_online_data_batcher.py  test_online_data_bus.py  test_online_data_loader.py  test_online_data_loader_habitat.py  test_online_data_schema.py  test_online_data_worker.py  test_online_data_worker_habitat.py  test_optical_flow.py  test_randomized_simulator.py  test_reactive_dodge_task.py  test_recorder.py  test_recorder_habitat.py  test_rl_env.py  test_safety_checker.py  test_unreal_transport.py  test_unreal_wrapper.py
tests/fixtures/: hover_sb3_dr_train_smoke.yaml  hover_sb3_smoke_experiment.yaml
zmq/: controller_node.py  simulator_node.py  visualizer_node.py
zmq/ros2_ws/zmq_ros2_bridge/: CMakeLists.txt  README.md  package.xml
zmq/ros2_ws/zmq_ros2_bridge/config/: zmq_ros2_bridge.yaml
zmq/ros2_ws/zmq_ros2_bridge/include/zmq_ros2_bridge/: zmq_ros2_bridge.hpp
zmq/ros2_ws/zmq_ros2_bridge/launch/: ros2_zmq_bridge.launch.py  zmq_ros2_bridge.launch.py
zmq/ros2_ws/zmq_ros2_bridge/msg/: Control.msg  Imu.msg
zmq/ros2_ws/zmq_ros2_bridge/src/: zmq_ros2_bridge.cpp
zmq/utils/: __init__.py  node.py
(+58 files in other folders)
