<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neurosim_ros2_bridge</name>
  <version>0.1.0</version>
  <description>
    Composable ROS 2 bridge for neurosim's Cortex pub/sub topics. Decodes the
    Cortex wire format (header + msgpack metadata + OOB frames) via
    cortex_wire_cpp and publishes into ROS 2 messages, one topic per YAML
    entry. Designed for intra-process colocation with downstream ROS 2 nodes.
  </description>
  <maintainer email="lr1883@princeton.edu">Richeek Das</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
